--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "gulp-newer": "^1.4.0",
     "gulp-pug": "^5.0.0",
     "gulp-sass": "^4.1.0",
+    "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify-es": "^2.0.0",
     "yargs-parser": "^5.0.1"
+  },
+  "dependencies": {
+    "imask": "^6.2.2"
   }
 }
